--- a/mozilla-chrome-tweaks/userChrome.css
+++ b/mozilla-chrome-tweaks/userChrome.css
@@ -1,28 +1,39 @@
-@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
-
-#main-window[tabsintitlebar="true"]:not([extradragspace="true"]) #TabsToolbar {
-  opacity: 0;
-  pointer-events: none;
+.tabbrowser-tab:not([pinned]) {
+  flex-grow:1;
+  min-width:150px;
 }
-#main-window:not([tabsintitlebar="true"]) #TabsToolbar {
-    visibility: collapse !important;
+.tabbrowser-tab,.tab-background {
+  height:var(--tab-min-height);
 }
-
-#sidebar-box[sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"] #sidebar-header {
+.tab-stack {
+  width: 100%;
+}
+#tabbrowser-tabs .scrollbox-innerbox {
+  display: flex;
+  flex-wrap: wrap;
+}
+#tabbrowser-tabs .arrowscrollbox-scrollbox {
+  overflow: visible;
+  display: block;
+}
+#titlebar,#titlebar-buttonbox{
+  height:var(--tab-min-height) !important;
+}
+#titlebar{
+  margin-bottom:calc(var(--tab-min-height)*-1) !important;
+}
+#main-window[sizemode="maximized"] #titlebar{
+  margin-bottom:calc(6px + var(--tab-min-height)*-1) !important;
+}
+#main-window[sizemode="maximized"] #TabsToolbar{
+  margin-left:var(--tab-min-height);
+}
+#titlebar:active{
+  margin-bottom:0 !important;
+}
+#titlebar:active #titlebar-content{
+  margin-bottom:var(--tab-min-height) !important;
+}
+#tabbrowser-tabs .scrollbutton-up,#tabbrowser-tabs .scrollbutton-down,#alltabs-button,.tabbrowser-tab:not([fadein]){
   display: none;
 }
-
-/*
-@-moz-document url(chrome://browser/content/browser.xul)
-{
-    #main-window,
-    browser[type="content-primary"],
-    browser[type="content"],
-    tabbrowser#content,
-    #content,
-    browser[type="content"] > html
-    {
-        background: #323234 !important;
-    }
-}
-*/
