--- a/mozilla-chrome-tweaks/userChrome.css
+++ b/mozilla-chrome-tweaks/userChrome.css
@@ -23,7 +23,7 @@
   margin-bottom:calc(var(--tab-min-height)*-1) !important;
 }
 #main-window[sizemode="maximized"] #titlebar{
-  margin-bottom:calc(6px + var(--tab-min-height)*-1) !important;
+  margin-bottom:calc(var(--tab-min-height) - 8) !important;
 }
 #main-window[sizemode="maximized"] #TabsToolbar{
   margin-left:var(--tab-min-height);
